@@ -1267,6 +1267,9 @@ Release 0.20.0 - Unreleased
     HADOOP-5655. TestMRServerPorts fails on java.net.BindException. (Devaraj
     Das via hairong)
 
+    HADOOP-5646. Fixes a problem in TestQueueCapacities. 
+    (Vinod Kumar Vavilapalli via ddas)
+
 Release 0.19.2 - Unreleased
 
   BUG FIXES
